syntax = "proto3";

package IM.BaseType;
option optimize_for = LITE_RUNTIME;

enum MsgType {
    MSG_TYPE_HEARTBEAT = 0;
    MSG_TYPE_LOGIN_REQ = 1;
    MSG_TYPE_LOGIN_RSP = 2;
    MSG_TYPE_REGISTER_REQ = 3;
    MSG_TYPE_REGISTER_RSP = 4;
}

enum UserState {
    USER_STATE_ONLINE = 0;
    USER_STATE_OFFLINE = 1;
}

enum ResultType {
    RESULT_TYPE_INVALID = 0;
    RESULT_TYPE_SUCCESS = 200;
    RESULT_TYPE_NO_SERVER = 514;
    RESULT_TYPE_REQUEST_ERR = 998;
}

// 心跳包
message ImMsgHeartBeat {
    uint64 time_stamp = 1;
    uint32 sequence = 2;
}

// 消息请求异常应答
message ImMsgError {
    uint32 error_type = 1;
}

// 消息信息
message ImMsgInfo {
    uint32 seq = 1;
}